--- a/mmall-fe/package.json
+++ b/mmall-fe/package.json
@@ -4,7 +4,9 @@
   "description": "mmall前端代码",
   "main": "index.js",
   "scripts": {
+    "dev_mac": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8088",
     "dev": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8088",
+    "dist_mac": "WEBPACK_ENV=online webpack -p",
     "dist": "set WEBPACK_ENV=online && webpack -p"
   },
   "author": "Zy",
