--- a/mmall-fe/package.json
+++ b/mmall-fe/package.json
@@ -22,5 +22,7 @@
     "webpack": ">=1.3.0 <3 || ^1.15.0",
     "webpack-dev-server": "^1.16.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hogan": "^1.0.2"
+  }
 }
